Updated CSS to prevent x-axis overflow.

--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 body {
-    margin: 10px;
+    padding: 10px;
     width: auto;
+    max-width: 100vw;
+    overflow-x: hidden;
+    
 }
 
 button {
     margin: 5px;
 }
 
-.weatherData {
+/* .weatherData {
     margin: 10px;
     width: 100vw;
-}
+} */
 
